--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     class="w-full text-black bg-[#B0FD45] px-2 h-[30px] rounded-[6px] flex items-center gap-2 transition-opacity delay-300 duration-1000 opacity-0 z-10 shadow-big">
                     <span class="inline md:hidden">PABLO M.</span><span class="hidden md:inline">PABLO
                         MORENO</span><span
-                          class="text-grey">Handmade &lt;web&gt; designer
+                          class="italic">Handmade &lt;web&gt; designer
                     </span>
                 </h3>
 
@@ -310,7 +310,7 @@
                               class="italic">M1 Capital</span> and the <span
                               class="italic">Erwin Olaf Magazine</span>. At Analogue, I learned to work
                         effectively under a Creative Director, delivering refined, high-quality results while meeting
-                        the deadlines set by the project manager. Thank you for this big step!
+                        the deadlines set by the project manager. Thank you for this big impression!
                     </p>
 
                 </div>
@@ -318,7 +318,7 @@
                 <div id="PROJECT-2" class="flex flex-col gap-4">
                     <div id="info" class="flex justify-between w-full pr-4">
                         <div class="flex flex-col">
-                            <span class="text-black text-lg leading-tight uppercase">Ésadikoi [diploma project]</span>
+                            <span class="text-black text-lg leading-tight uppercase">éSADIKOI [diploma project]</span>
                             <span class="text-grey md:text-lg leading-tight">Research, Design, Code, CMS</span>
                         </div>
                         <div class="flex flex-col items-end">
@@ -385,13 +385,14 @@
                         interfaces concepts for them. Elements such as taxonomy, temporality, and the relationships
                         between people were carefully considered to shape <span
                               class="italic">how information is connected and experienced</span>.
-                        Later on, I built Ésadikoi <span
+                        Later on, I built éSADIKOI <span
                               class="italic">[eh! ça dit quoi?]</span> around three main pillars: events, places and
                         people. Thanks to a lightweight spreadsheet-based CMS, students and staff can easily add and
                         update entries, fostering connection and participation within the school community. <a
                            href="https://esadikoi.netlify.app/"
-                           class="text-grey hover:text-black duration-300">Visit
-                            website.</a></p>
+                           class="text-grey hover:text-black duration-300" data-slideframe="true"
+                           title="éSADIKOI" data-slideframe-bound="true">Visit
+                            website</a></p>
 
                 </div>
 
@@ -460,10 +461,12 @@
                         relies
                         on a very text-based content that offers a literary reading experience while maintaining a
                         digital rhythm. Images appear either as small visual accents or in full-screen frames, creating
-                        a balanced contrast. The limited number of pages allows navigation through colored framing
-                        blocks, keeping the experience clean and focused. <a href="https://totelcoscapaque.cat/"
-                           class="text-grey hover:text-black duration-300">Visit
-                            website.</a></p>
+                        a balanced contrast. The limited number of pages allows navigation through the colored blocks
+                        that frames
+                        the website, keeping the experience clean and smart. <a href="https://totelcoscapaque.cat/"
+                           class="text-grey hover:text-black duration-300" data-slideframe="true"
+                           title="Tot el cos cap a què" data-slideframe-bound="true">Visit
+                            website</a></p>
 
                 </div>
             </div>
@@ -488,14 +491,14 @@
                             <input type="radio" id="filter-commissioned" value="Commissioned"
                                    class="peer h-3 w-3 cursor-pointer appearance-none rounded-full border border-[#917400] checked:bg-[#917400] transition-all">
                             <span class="flex items-start gap-1">Commissioned <span
-                                      class="hidden md:inline text-[8px]">7</span></span>
+                                      class="hidden md:inline text-[8px]">9</span></span>
                         </label>
 
                         <label class="flex items-center gap-1 cursor-pointer">
                             <input type="radio" id="filter-personal" value="Personal"
                                    class="peer h-3 w-3 cursor-pointer appearance-none rounded-full border border-[#917400] checked:bg-[#917400] transition-all">
                             <span class="flex items-start gap-1">Personal <span
-                                      class="hidden md:inline text-[8px]">46</span></span>
+                                      class="hidden md:inline text-[8px]">36</span></span>
                         </label>
                     </div>
                 </div>
@@ -542,7 +545,8 @@
             <div class="flex flex-col gap-4 col-span-4">
 
                 <div
-                     class="listStack flex gap-4 text-base md:text-lg group hover:bg-zinc-200 p-2 rounded-[8px] transition duration-300 cursor-pointer group fade-loop">
+                     class="listStack flex gap-4 text-base md:text-lg group hover:bg-zinc-200 p-2 rounded-[8px] transition duration-300 cursor-pointer group fade-loop"
+                     data-popup-image="looking.webp">
                     <div class="w-[90px]">
                         <span class="">Now</span>
                     </div>
@@ -550,24 +554,21 @@
                         <div class="flex gap-2 items-center">
                             <span class="text-black ">Looking for new design colaborations</span>
                         </div>
-                        <p class=" text-grey group-hover:text-black transition duration-300 text-sm">I
-                            would
-                            like to
-                            find a studio or freelancer who works with websites projects to bring my
-                            ideas
-                            and
-                            expertise</p>
+                        <p class=" text-grey group-hover:text-black transition duration-300 text-sm">I would like to
+                            collaborate with studios or freelancers dealing with more coding projects to bring them my
+                            ideas, abilities and energy.</p>
                     </div>
                     <div class="h-full flex items-center justify-center">
                         <span
-                              class=" group-hover:opacity-100 opacity-0 leading-tight text-grey transition duration-300 text-[12px] border border-grey p-1 mr-4 rounded-md hidden md:block">Amsterdam</span>
+                              class=" group-hover:opacity-100 opacity-0 leading-tight text-black transition duration-300 text-[12px] border border-black p-1 mr-4 rounded-md hidden md:block">Amsterdam</span>
                     </div>
                 </div>
 
 
                 <!-- 2025 - DEsigner at Analogue -->
                 <div
-                     class="listStack flex gap-4 text-base md:text-lg group hover:bg-zinc-200 p-2 rounded-[8px] transition duration-300 cursor-pointer group">
+                     class="listStack flex gap-4 text-base md:text-lg group hover:bg-zinc-200 p-2 rounded-[8px] transition duration-300 cursor-pointer group"
+                     data-popup-image="analogue-designer.webp">
                     <div class="w-[90px]">
                         <span
                               class="text-grey group-hover:text-black transition duration-300">2025</span>
@@ -586,13 +587,14 @@
                     </div>
                     <div class="h-full flex items-center justify-center">
                         <span
-                              class=" group-hover:opacity-100 opacity-0 leading-tight text-grey transition duration-300 text-[12px] border border-grey p-1 mr-4 rounded-md hidden md:block">Amsterdam</span>
+                              class=" group-hover:opacity-100 opacity-0 leading-tight text-black transition duration-300 text-[12px] border border-black p-1 mr-4 rounded-md hidden md:block">Amsterdam</span>
                     </div>
                 </div>
 
                 <!-- 2024 – Intern at Analogue -->
                 <div
-                     class="listStack flex gap-4 text-base md:text-lg group hover:bg-zinc-200 p-2 rounded-[8px] transition duration-300 cursor-pointer group">
+                     class="listStack flex gap-4 text-base md:text-lg group hover:bg-zinc-200 p-2 rounded-[8px] transition duration-300 cursor-pointer group"
+                     data-popup-image="analogue-intern.webp">
                     <div class="w-[90px]">
                         <span
                               class="text-grey group-hover:text-black transition duration-300">2024</span>
@@ -611,13 +613,14 @@
                     </div>
                     <div class="h-full flex items-center justify-center">
                         <span
-                              class=" group-hover:opacity-100 opacity-0 leading-tight text-grey transition duration-300 text-[12px] border border-grey p-1 mr-4 rounded-md hidden md:block">Amsterdam</span>
+                              class=" group-hover:opacity-100 opacity-0 leading-tight text-black transition duration-300 text-[12px] border border-black p-1 mr-4 rounded-md hidden md:block">Amsterdam</span>
                     </div>
                 </div>
 
                 <!-- 2024 – Mentor for AFEV association -->
                 <div
-                     class="listStack flex gap-4 text-base md:text-lg group hover:bg-zinc-200 p-2 rounded-[8px] transition duration-300 cursor-pointer group">
+                     class="listStack flex gap-4 text-base md:text-lg group hover:bg-zinc-200 p-2 rounded-[8px] transition duration-300 cursor-pointer group"
+                     data-popup-image="afev.webp">
                     <div class="w-[90px]">
                         <span
                               class="text-grey group-hover:text-black transition duration-300">2024</span>
@@ -634,13 +637,14 @@
                     </div>
                     <div class="h-full flex items-center justify-center">
                         <span
-                              class=" group-hover:opacity-100 opacity-0 leading-tight text-grey transition duration-300 text-[12px] border border-grey p-1 mr-4 rounded-md hidden md:block">Amiens</span>
+                              class=" group-hover:opacity-100 opacity-0 leading-tight text-black transition duration-300 text-[12px] border border-black p-1 mr-4 rounded-md hidden md:block">Amiens</span>
                     </div>
                 </div>
 
                 <!-- 2024 – Welcomer at Maison de la Culture -->
                 <div
-                     class="listStack flex gap-4 text-base md:text-lg group hover:bg-zinc-200 p-2 rounded-[8px] transition duration-300 cursor-pointer group">
+                     class="listStack flex gap-4 text-base md:text-lg group hover:bg-zinc-200 p-2 rounded-[8px] transition duration-300 cursor-pointer group"
+                     data-popup-image="mca.webp">
                     <div class="w-[90px]">
                         <span
                               class="text-grey group-hover:text-black transition duration-300">2024</span>
@@ -656,14 +660,15 @@
                     </div>
                     <div class="h-full flex items-center justify-center">
                         <span
-                              class=" group-hover:opacity-100 opacity-0 leading-tight text-grey transition duration-300 text-[12px] border border-grey p-1 mr-4 rounded-md hidden md:block">Amiens</span>
+                              class=" group-hover:opacity-100 opacity-0 leading-tight text-black transition duration-300 text-[12px] border border-black p-1 mr-4 rounded-md hidden md:block">Amiens</span>
                     </div>
                 </div>
 
 
                 <!-- 2024↑2022 – Double master in UX/UI at ESAD -->
                 <div
-                     class="listStack flex gap-4 text-base md:text-lg group hover:bg-zinc-200 p-2 rounded-[8px] transition duration-300 cursor-pointer group">
+                     class="listStack flex gap-4 text-base md:text-lg group hover:bg-zinc-200 p-2 rounded-[8px] transition duration-300 cursor-pointer group"
+                     data-popup-image="esad.webp">
                     <div class="w-[90px]">
                         <span
                               class="text-grey group-hover:text-black transition duration-300">2024<br>↑2022</span>
@@ -681,13 +686,14 @@
                     </div>
                     <div class="h-full flex items-center justify-center">
                         <span
-                              class=" group-hover:opacity-100 opacity-0 leading-tight text-grey transition duration-300 text-[12px] border border-grey p-1 mr-4 rounded-md hidden md:block">Amiens</span>
+                              class=" group-hover:opacity-100 opacity-0 leading-tight text-black transition duration-300 text-[12px] border border-black p-1 mr-4 rounded-md hidden md:block">Amiens</span>
                     </div>
                 </div>
 
                 <!-- 2022 – Internship at Cuchillo -->
                 <div
-                     class="listStack flex gap-4 text-base md:text-lg group hover:bg-zinc-200 p-2 rounded-[8px] transition duration-300 cursor-pointer group">
+                     class="listStack flex gap-4 text-base md:text-lg group hover:bg-zinc-200 p-2 rounded-[8px] transition duration-300 cursor-pointer group"
+                     data-popup-image="cuchillo.webp">
                     <div class="w-[90px]">
                         <span
                               class="text-grey group-hover:text-black transition duration-300">2022</span>
@@ -704,13 +710,14 @@
                     </div>
                     <div class="h-full flex items-center justify-center">
                         <span
-                              class=" group-hover:opacity-100 opacity-0 leading-tight text-grey transition duration-300 text-[12px] border border-grey p-1 mr-4 rounded-md hidden md:block">Bilbao</span>
+                              class=" group-hover:opacity-100 opacity-0 leading-tight text-black transition duration-300 text-[12px] border border-black p-1 mr-4 rounded-md hidden md:block">Bilbao</span>
                     </div>
                 </div>
 
                 <!-- 2021↑2019 – Bachelor Interactive Graphic Design at ESADHaR -->
                 <div
-                     class="listStack flex gap-4 text-base md:text-lg group hover:bg-zinc-200 p-2 rounded-[8px] transition duration-300 cursor-pointer group">
+                     class="listStack flex gap-4 text-base md:text-lg group hover:bg-zinc-200 p-2 rounded-[8px] transition duration-300 cursor-pointer group"
+                     data-popup-image="esadhar.webp">
                     <div class="w-[90px]">
                         <span
                               class="text-grey group-hover:text-black transition duration-300">2021<br>↑2019</span>
@@ -728,14 +735,15 @@
                     </div>
                     <div class="h-full flex items-center justify-center">
                         <span
-                              class=" group-hover:opacity-100 opacity-0 leading-tight text-grey transition duration-300 text-[12px] border border-grey p-1 mr-4 rounded-md hidden md:block">Le
+                              class=" group-hover:opacity-100 opacity-0 leading-tight text-black transition duration-300 text-[12px] border border-black p-1 mr-4 rounded-md hidden md:block">Le
                             Havre</span>
                     </div>
                 </div>
 
                 <!-- 2018 – Internship at M.U.R.R -->
                 <div
-                     class="listStack flex gap-4 text-base md:text-lg group hover:bg-zinc-200 p-2 rounded-[8px] transition duration-300 cursor-pointer group">
+                     class="listStack flex gap-4 text-base md:text-lg group hover:bg-zinc-200 p-2 rounded-[8px] transition duration-300 cursor-pointer group"
+                     data-popup-image="murr2.webp">
                     <div class="w-[90px]">
                         <span
                               class="text-grey group-hover:text-black transition duration-300">2018</span>
@@ -753,13 +761,14 @@
                     </div>
                     <div class="h-full flex items-center justify-center">
                         <span
-                              class=" group-hover:opacity-100 opacity-0 leading-tight text-grey transition duration-300 text-[12px] border border-grey p-1 mr-4 rounded-md hidden md:block">Paris</span>
+                              class=" group-hover:opacity-100 opacity-0 leading-tight text-black transition duration-300 text-[12px] border border-black p-1 mr-4 rounded-md hidden md:block">Paris</span>
                     </div>
                 </div>
 
                 <!-- 2018↑2016 – License in type design at Estienne -->
                 <div
-                     class="listStack flex gap-4 text-base md:text-lg group hover:bg-zinc-200 p-2 rounded-[8px] transition duration-300 cursor-pointer group">
+                     class="listStack flex gap-4 text-base md:text-lg group hover:bg-zinc-200 p-2 rounded-[8px] transition duration-300 cursor-pointer group"
+                     data-popup-image="estienne.webp">
                     <div class="w-[90px]">
                         <span
                               class="text-grey group-hover:text-black transition duration-300">2018<br>↑2016</span>
@@ -776,7 +785,7 @@
                     </div>
                     <div class="h-full flex items-center justify-center">
                         <span
-                              class=" group-hover:opacity-100 opacity-0 leading-tight text-grey transition duration-300 text-[12px] border border-grey p-1 mr-4 rounded-md hidden md:block">Paris</span>
+                              class=" group-hover:opacity-100 opacity-0 leading-tight text-black transition duration-300 text-[12px] border border-black p-1 mr-4 rounded-md hidden md:block">Paris</span>
                     </div>
                 </div>
             </div>
@@ -849,7 +858,7 @@
                         <p
                            class="text-center transition duration-300 leading-tight text-grey mt-1">
                             If you are interested on a extended presentation, dont' hesitate to contact me,
-                            to go deeper on the projects and abilities I can provide.</p>
+                            to go deeper on the projects and the abilities I can bring to your projects.</p>
 
                         <a href="tel:+31613381141"
                            class="bg-[#35C759] inline-flex gap-3 rounded-full py-3 justify-center text-white px-20 hover:bg-[#22aa44] mx-auto transition duration-300 items-center mt-6 text-xl shadow-big">Call
