--- a/index.html
+++ b/index.html
@@ -575,8 +575,7 @@
                     </div>
                     <div class="leading-tight flex flex-col w-full gap-1">
                         <div class="flex gap-2 items-center">
-                            <span class="text-red-600">Designer at Analogue
-                                <small>Ⓡ</small></span>
+                            <span class="text-red-600">Designer at Analogue</span>
                         </div>
                         <p class=" text-grey group-hover:text-black transition duration-300 text-sm">As
                             an
@@ -601,8 +600,7 @@
                     </div>
                     <div class="leading-tight flex flex-col w-full gap-1">
                         <div class="flex gap-2 items-center">
-                            <span class="text-green-600">Intern at Analogue
-                                <small>Ⓡ</small></span>
+                            <span class="text-green-600">Intern at Analogue</span>
                         </div>
                         <p class=" text-grey group-hover:text-black transition duration-300 text-sm">
                             Six-month
@@ -700,7 +698,7 @@
                     </div>
                     <div class="leading-tight flex flex-col w-full gap-1">
                         <div class="flex gap-2 items-center">
-                            <span class="text-green-600">Internship at Cuchillo</span>
+                            <span class="text-green-600">Internship at Cuchillo <small>Ⓒ</small></span>
                         </div>
                         <p class=" text-grey group-hover:text-black transition duration-300 text-sm">
                             Different
