--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                  class="col-span-2 sticky top-3 text-sm h-fit flex items-center justify-between gap-1 md:pb-0 z-10">
 
                 <div id="intro-photo"
-                     class="rounded-full aspect-square group relative transition-opacity delay-150 duration-1000 opacity-0 h-[30px] w-[30px] cursor-pointer shadow-big"
+                     class="rounded-full aspect-square group relative transition-opacity delay-100 duration-1000 opacity-0 h-[30px] w-[30px] cursor-pointer shadow-big"
                      onclick="alert('♻️ Presentation website made by Pablo on November 2025. Hancoded using HTML+CSS+JS and Tailwind CSS. Hosted in Netlify. ♻️')">
                     <img src="assets/pablo-moreno.webp" alt=""
                          class="absolute transition duration-600 ease-out aspect-square h-[30px] w-[30px] rounded-full group-hover:scale-90">
@@ -53,7 +53,7 @@
                 </div>
 
                 <h3 id="intro-texto"
-                    class="w-full text-black bg-[#B0FD45] px-2 h-[30px] rounded-[6px] flex items-center gap-2 transition-opacity delay-300 duration-1000 opacity-0 z-10 shadow-big">
+                    class="w-full text-black bg-[#B0FD45] px-2 h-[30px] rounded-[6px] flex items-center gap-2 transition-opacity delay-200 duration-1000 opacity-0 z-10 shadow-big">
                     <span class="inline md:hidden">PABLO M.</span><span class="hidden md:inline">PABLO
                         MORENO</span><span
                           class="italic">Handmade &lt;web&gt; designer
@@ -63,15 +63,15 @@
             </div>
 
             <div id="intro-menu"
-                 class="content-center w-full col-span-4 items-center text-base md:text-sm md:mb-0 z-0 transition-opacity delay-450 duration-1000 opacity-0">
+                 class="content-center w-full col-span-4 items-center text-base md:text-sm md:mb-0 z-0 transition-opacity delay-300 duration-1000 opacity-0">
                 <a href="#today"
                    class="mx-px leading-tight transition-colors duration-200 cursor-pointer text-grey hover:text-[#11C3FF]">
                     TODAY
-                </a> I whom to show
+                </a> I whom to show my
                 <a href="#highlighted"
                    class="mx-px leading-tight transition-colors duration-200 cursor-pointer text-grey hover:text-[#E90801]">
-                    HIGHLIGHTED
-                </a> projects and a list of
+                    HIGHLIGHTED PROJECTS
+                </a> and a list of
                 <a href="#websites"
                    class="mx-px leading-tight transition-colors duration-200 cursor-pointer text-grey hover:text-[#fad74b]">
                     WEBSITES
@@ -486,19 +486,19 @@
                     <h3>WEBSITES
                     </h3>
 
-                    <div id="nature-filters" class="flex gap-4 items-center text-sm text-[#917400]">
+                    <div id="nature-filters" class="flex gap-1 md:gap-4 items-center text-sm text-[#917400]">
                         <label class="flex items-center gap-1 cursor-pointer">
                             <input type="radio" id="filter-commissioned" value="Commissioned"
                                    class="peer h-3 w-3 cursor-pointer appearance-none rounded-full border border-[#917400] checked:bg-[#917400] transition-all">
                             <span class="flex items-start gap-1">Commissioned <span
-                                      class="hidden md:inline text-[8px]">9</span></span>
+                                      class="text-[8px]">9</span></span>
                         </label>
 
                         <label class="flex items-center gap-1 cursor-pointer">
                             <input type="radio" id="filter-personal" value="Personal"
                                    class="peer h-3 w-3 cursor-pointer appearance-none rounded-full border border-[#917400] checked:bg-[#917400] transition-all">
                             <span class="flex items-start gap-1">Personal <span
-                                      class="hidden md:inline text-[8px]">36</span></span>
+                                      class="text-[8px]">36</span></span>
                         </label>
                     </div>
                 </div>
@@ -855,8 +855,8 @@
                         </h4>
                         <p
                            class="text-center transition duration-300 leading-tight text-grey mt-1">
-                            If you are interested on a extended presentation, dont' hesitate to contact me,
-                            to go deeper on the projects and the abilities I can bring to your projects.</p>
+                            If you're interested in a more in-depth presentation, feel free to reach out.
+                            I'd be happy to walk you through my work and the value I can bring to your projects.</p>
 
                         <a href="tel:+31613381141"
                            class="bg-[#35C759] inline-flex gap-3 rounded-full py-3 justify-center text-white px-20 hover:bg-[#22aa44] mx-auto transition duration-300 items-center mt-6 text-xl shadow-big">Call
