--- a/index.html
+++ b/index.html
@@ -856,7 +856,7 @@
                         <p
                            class="text-center transition duration-300 leading-tight text-grey mt-1">
                             If you're interested in a more in-depth presentation, feel free to reach out.
-                            I'd be happy to walk you through my work and the value I can bring to your projects.</p>
+                            I'd be happy to walk you through my work and the value I can bring to your projects</p>
 
                         <a href="tel:+31613381141"
                            class="bg-[#35C759] inline-flex gap-3 rounded-full py-3 justify-center text-white px-20 hover:bg-[#22aa44] mx-auto transition duration-300 items-center mt-6 text-xl shadow-big">Call
