--- a/index.html
+++ b/index.html
@@ -106,31 +106,34 @@
 
             </div>
 
-            <div class="flex flex-col md:grid grid-cols-2 gap-4 col-span-4 ml-9 md:ml-0">
+            <div class="flex flex-col gap-12 col-span-4  md:w-2/3">
                 <div>
                     <h4 class="text-grey text-sm">WHERE I'M FROM</h4>
-                    <p class="text-lg">I was born and raised in Bilbao (Spain) until my 13th birthday, then I went to a
-                        boarding school in south of France. Then I followed art and design studies in differents cities
-                        over the next 6 years: Paris, Le Havre, Amiens... Graduated with a Master in UI/UX I did my best
-                        to move to Amsterdam and a lot of things came since September 2025: working in a studio, making
-                        a lot of friends, volunteer in diferent places, riding my Sparta...</p>
+                    <p class="text-lg">I was born and raised in Bilbao (ES) until the age of 13, when I moved to a
+                        boarding school in the south of France. Over the following six years, I studied art and design
+                        in several cities: Paris, Le Havre, and Amiens. Eventually graduating with a Master's in UI/UX
+                        Design. After that, I pursued my career in Amsterdam, where I began working at Analogue Agency.
+                    </p>
                 </div>
                 <div>
                     <h4 class="text-grey text-sm">WHAT I USED TO DO</h4>
-                    <p class="text-lg">These last years at school I was mainly interested in showing an alternative way
-                        of making websites and interfaces, starting with small ideas and making them from scratch. My
-                        thesis (The We We Want) also references to the designer-maker as a solution for a more playful
-                        and meaningful web diaspora (?).
-                        <br>
-                        I worked for a year at Analogue Agency, a branding and award-websites agency where I worked (and
-                        learned a lot) in tasks from the exploration or UX phase to print files or Framer development.
+                    <p class="text-lg">I'm deeply interested in exploring alternative ways of building websites and
+                        interfaces — starting from small ideas and building them from scratch. My thesis,
+                        <a
+                           href="https://thewebwewant.online/"
+                           class="italic hover:text-grey duration-300" data-slideframe="true"
+                           title="The We We
+                            Want" data-slideframe-bound="true">The We We
+                            Want</a>, reflects on the notion of the designer-maker as a response to today's digital
+                        landscape,
+                        proposing a more playful and meaningful web culture.
                     </p>
                 </div>
                 <div>
                     <h4 class="text-grey text-sm">WHERE I'M NOW</h4>
                     <p class="text-lg">This second year in the city asked me to diversify my work related collaborations
-                        and focus on more handcoded-websites. For this I'm seeking for studio or freelancers where I can
-                        bring my ideas and expertise</p>
+                        and focus on more handcoded-websites. In this new phase, I'm looking to work with studios or
+                        freelancers where I can bring my ideas, skills, and energy to interesting digital projects.</p>
                 </div>
             </div>
 
