--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
 
                 <div
                      class=" text-[#917400] bg-[#fad74b] px-2 h-[30px] rounded-[6px] flex items-center  justify-between w-full shadow-big">
-                    <h3>WEBSITES
+                    <h3>SITES
                     </h3>
 
                     <div id="nature-filters" class="flex gap-1 md:gap-4 items-center text-sm text-[#917400]">
