--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
         <div id="contact"
              class="gap-4 w-full flex flex-col pointer-events-auto scroll-mt-3 md:scroll-mt-[calc(50vh-30px)] mb-10">
 
-            <div class="flex flex-col gap-4 w-full md:grid grid-cols-6">
+            <div class="flex flex-col gap-4 w-full md:grid grid-cols-6 mb-[200px]">
                 <div
                      class="col-span-2 sticky top-4 md:top-[calc(50vh-30px)] text-sm h-fit flex items-center justify-between gap-1">
 
@@ -884,7 +884,8 @@
                     ⏳</div>
                 <h3
                     class="w-full text-black bg-white px-2 h-[30px] rounded-[6px] flex items-center justify-between shadow-big">
-                    THANKS FOR YOUR TIME
+                    <span>
+                        THANKS <span class="hidden md:inline">FOR YOUR TIME</span></span>
                     <div
                          class="flex gap-2 col-span-4 justify-end items-center text-sm">
                         <p class="text-grey"><span class="hidden md:inline">You spent</span> <span
