mistakes 'thanks leo'

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                            href="https://thewebwewant.online/"
                            class="italic hover:text-grey duration-300" data-slideframe="true"
                            title="The We We
-                            Want" data-slideframe-bound="true">The We We
+                            Want" data-slideframe-bound="true">The Web We
                             Want</a>, reflects on the notion of the designer-maker as a response to today's digital
                         landscape,
                         proposing a more playful and meaningful web culture.
