the web we want UP

--- a/index.html
+++ b/index.html
@@ -67,15 +67,15 @@
                 <a href="#today"
                    class="mx-px leading-tight transition-colors duration-200 cursor-pointer text-grey hover:text-[#11C3FF]">
                     TODAY
-                </a> I whom to show my
-                <a href="#highlighted"
+                </a> I'm showing my
+                <a href="#last"
                    class="mx-px leading-tight transition-colors duration-200 cursor-pointer text-grey hover:text-[#E90801]">
-                    HIGHLIGHTED PROJECTS
+                    LAST PROJECTS
                 </a> and a list of
                 <a href="#websites"
                    class="mx-px leading-tight transition-colors duration-200 cursor-pointer text-grey hover:text-[#fad74b]">
                     WEBSITES
-                </a> I made, along with my
+                </a> I coded, along with my
                 <a href="#resume"
                    class="mx-px leading-tight transition-colors duration-200 cursor-pointer text-grey hover:text-white">
                     RESUME
@@ -122,8 +122,7 @@
                         <a
                            href="https://thewebwewant.online/"
                            class="italic hover:text-grey duration-300" data-slideframe="true"
-                           title="The We We
-                            Want" data-slideframe-bound="true">The Web We
+                           title="The Web We Want" data-slideframe-bound="true">The Web We
                             Want</a>, reflects on the notion of the designer-maker as a response to today's digital
                         landscape,
                         proposing a more playful and meaningful web culture.
@@ -139,7 +138,7 @@
 
         </div>
 
-        <div id="highlighted"
+        <div id="last"
              class="gap-4 w-full flex flex-col md:grid grid-cols-6 pointer-events-auto scroll-mt-3 md:scroll-mt-[calc(50vh-30px)] mb-20 md:mb-[50vh]">
 
             <div
@@ -150,7 +149,7 @@
                     2</div>
                 <h3
                     class="w-full text-white bg-[#E90801] px-2 h-[30px] rounded-[6px] flex items-center shadow-big">
-                    HIGHLIGHTED PROJECTS
+                    LAST PROJECTS
                 </h3>
             </div>
 
@@ -169,7 +168,6 @@
                             <span class="text-grey md:text-lg leading-tight">Identities, UX, animation,
                                 Framer, print</span>
                         </div>
-                        <div class="text-black text-lg leading-tight hidden md:block">2025</div>
                     </div>
 
                     <div
@@ -324,9 +322,7 @@
                             <span class="text-black text-lg leading-tight uppercase">éSADIKOI [diploma project]</span>
                             <span class="text-grey md:text-lg leading-tight">Research, Design, Code, CMS</span>
                         </div>
-                        <div class="flex flex-col items-end">
-                            <div class="text-black text-lg w-fit leading-tight hidden md:block">2024</div>
-                        </div>
+
                     </div>
 
                     <div
@@ -405,9 +401,7 @@
                             <span class="text-black text-lg leading-tight uppercase">Tot el cos cap a què</span>
                             <span class="text-grey md:text-lg leading-tight">Design, Code, Multilingual</span>
                         </div>
-                        <div class="flex flex-col items-end">
-                            <div class="text-black text-lg w-fit leading-tight hidden md:block">2025</div>
-                        </div>
+
                     </div>
 
                     <div
