--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     <p class="text-lg">I'm deeply interested in exploring alternative ways of building websites and
                         interfaces — starting from small ideas and building them from scratch. My thesis,
                         <a
-                           href="https://thewebwewant.online/"
+                           href="https://pablo.energy/thewebwewant"
                            class="italic hover:text-grey duration-300" data-slideframe="true"
                            title="The Web We Want" data-slideframe-bound="true">The Web We
                             Want</a>, reflects on the notion of the designer-maker as a response to today's digital
