--- a/index.html
+++ b/index.html
@@ -109,10 +109,11 @@
             <div class="flex flex-col gap-12 col-span-4  md:w-2/3">
                 <div>
                     <h4 class="text-grey text-sm">WHERE I'M FROM</h4>
-                    <p class="text-lg">I was born and raised in Bilbao (ES) until the age of 13, when I moved to a
+                    <p class="text-lg">I was born and raised in Bilbao, Spain, until the age of 13, when I moved to a
                         boarding school in the south of France. Over the following six years, I studied art and design
-                        in several cities: Paris, Le Havre, and Amiens. Eventually graduating with a Master's in UI/UX
-                        Design. After that, I pursued my career in Amsterdam, where I began working at Analogue Agency.
+                        in diferent cities and schools: École Estienne in Paris, ESADHaR in Le Havre, and éSAD in
+                        Amiens. Graduating with a Master's in UI/UX
+                        Design, I pursued my life in Amsterdam, where I began working at Analogue Agency.
                     </p>
                 </div>
                 <div>
